--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "whatnow",
   "version": "1.0.0",
-  "description": "Participatory democracy app MVP",
+  "description": "Participatory democracy app MVP with user authentication and contribution features",
   "main": "server/index.js",
   "scripts": {
     "start": "node server/index.js",
@@ -17,5 +17,7 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
-  }
+  },
+  "author": "AshmanRoonz",
+  "license": "MIT"
 }
