--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb+srv://whatnow:mySecurePass123@whatnowcluster.io1hrgc.mongodb.net/?retryWrites=true&w=majority&appName=WhatNowCluster
+MONGODB_URI=mongodb+srv://whatnow:whatnow@whatnowcluster.io1hrgc.mongodb.net/?retryWrites=true&w=majority&appName=WhatNowCluster
 JWT_SECRET=your_random_secure_string_12345
 PORT=3000
